--- a/README.rdoc
+++ b/README.rdoc
@@ -1,7 +1,6 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Test project by Rajesh - creating my first web application using Ruby
 
 Things you may want to cover:
 
